--- a/masked_language_modelling.ipynb
+++ b/masked_language_modelling.ipynb
@@ -901,6 +901,81 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# data for human experiment\n",
+        "\n",
+        "targets = []\n",
+        "for i, review in enumerate(dataset):\n",
+        "  tokenized, random_token_idx, original_token = tokenize_and_mask_random(review[\"text\"])\n",
+        "  targets.append(original_token)\n",
+        "  print(i, tokenizer.decode(tokenized[\"input_ids\"][0]))\n",
+        "  if i>=10: # skip rest\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wwuqz8A2N7Uv",
+        "outputId": "ee7f42e7-afb5-4dad-c708-74e55971ecd5"
+      },
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 [CLS] I rented this movie because it sounded pretty interesting but to my [MASK] this movie was the worst movie I had ever seen! I read the comment from Gumby - 8 and [SEP]\n",
+            "1 [CLS] Moonwalker is [MASK] incredible!!!!!!! What else can I say!? Michael Jackson is the true King of pop, rock and soul!!! Moonwalker has everything! Great story line, [SEP]\n",
+            "2 [CLS] To Die For ( 1989 ) was just another d. t. v. feature [MASK] made an appearance on cable ad nasuem during the early nineties. The only thing notable about this feature was the [SEP]\n",
+            "3 [CLS] All Dogs Go To Heaven is on a par [MASK] Watership Down for scary kiddies films. Both were dark and pretty sinister, but at the same time the most mesmerising [SEP]\n",
+            "4 [CLS] I got to see this film at a preview and was dazzled by it. It's not the typical [MASK] comedy. I can't remember laughing so hard at a film and [SEP]\n",
+            "5 [CLS] \" Look, I know this may suck right now, but pain is temporary, film is forever. Whatever you do right now is burned into [MASK]uloid for all time and for thousands [SEP]\n",
+            "6 [CLS] Obviously, I didn't care for Things to Come ( aka \" The Shape of Things to Come \" ) as much as most viewers. That means that there is a good chance [MASK] you'll [SEP]\n",
+            "7 [CLS] This is a superbly imaginative low budget Sci - fi movie from cult director Vincenzo Natali. The film plays out like a crossing of Phillip K Dick with Hitchcock and [MASK]ronenberg and [SEP]\n",
+            "8 [CLS] [MASK] Wood is eclipsed and becomes Orson Welles. This film is fantastic. Vampire witches who fight in terribly choreographed scenes and dialog that could have breaking ribs with laughter. Plan [SEP]\n",
+            "9 [CLS] This is one of those films that explore the culture clash of Eastern born people in Westernized cultures. < br [MASK] > < br / > Loving on Tokyo Time is a sad film about the [SEP]\n",
+            "10 [CLS] This is a great movie if viewed in the proper context - It was meant to be a parody of teen - [MASK] - devil - worship movies ( and the'80s saw plenty of them )! I [SEP]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i, label in enumerate(targets):\n",
+        "  print(i, label)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DkgLz08RO7Iu",
+        "outputId": "42f490f3-1ebc-4753-9c66-b0423b583f05"
+      },
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 Horror\n",
+            "1 absolutely\n",
+            "2 that\n",
+            "3 with\n",
+            "4 romantic\n",
+            "5 cell\n",
+            "6 that\n",
+            "7 C\n",
+            "8 Ed\n",
+            "9 /\n",
+            "10 horror\n"
+          ]
+        }
+      ]
     }
   ]
 }
