--- a/masked_language_modelling.ipynb
+++ b/masked_language_modelling.ipynb
@@ -374,7 +374,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# BERT for masked langauge modelling\n"
+        "# BERT for masked language modelling\n"
       ],
       "metadata": {
         "id": "U2k3QEnj0hTN"
