--- a/exercise_prompting.ipynb
+++ b/exercise_prompting.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1SBwnZsLMqYaC0slYzxmc",
+      "authorship_tag": "ABX9TyNaVuDl/HytKQb14q1CLd8w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2084,7 +2084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "vcsdC8SNr_ix",
         "colab": {
@@ -2192,7 +2192,7 @@
         "id": "bfAojj42sDRe",
         "outputId": "d5684a12-2a77-4ef1-a6f7-7c56d3b24f6b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2319,7 +2319,7 @@
         "id": "50vRteAjsLED",
         "outputId": "5bc334c4-bc76-47e5-9267-6c870827711c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2393,7 +2393,7 @@
         "id": "nGENYS29TfO2",
         "outputId": "4b609982-7ebd-4fa3-a09c-b663acf46256"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2466,7 +2466,7 @@
         "id": "Ylo0BdAaYXVN",
         "outputId": "d53e4d15-2e06-4c61-8f12-53489e76eb0f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2535,7 +2535,7 @@
         "id": "_qBnj3jn0ujm",
         "outputId": "b30248dd-2e16-4555-e9d7-4772daaf8dd9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2588,7 +2588,7 @@
         "id": "8-je0gCfbllV",
         "outputId": "4ef4fa5f-7e2c-4f3e-d9c4-169ecbe8790c"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2607,6 +2607,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Notes\n",
+        "* I used default parameters, but there are some important parameters controlling the generation:\n",
+        "  * `do_sample=False` means greedy decoding, i.e. always choose a token with the highest probability as the next token\n",
+        "  * `multinomial sampling`: randomly selects the next token based on the probability distribution over the entire vocabulary given by the model\n",
+        "  * parameters: top_k, top_p, temperature\n",
+        "  * More about this: [https://huggingface.co/blog/how-to-generate](https://huggingface.co/blog/how-to-generate)\n"
+      ],
+      "metadata": {
+        "id": "HCDjMKyYiQMJ"
+      }
     }
   ]
 }
