--- a/exercise_prompting.ipynb
+++ b/exercise_prompting.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaVuDl/HytKQb14q1CLd8w",
+      "authorship_tag": "ABX9TyMOWDxbiQ99RQeS3cpLbw8v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2612,11 +2612,13 @@
       "cell_type": "markdown",
       "source": [
         "## Notes\n",
-        "* I used default parameters, but there are some important parameters controlling the generation:\n",
-        "  * `do_sample=False` means greedy decoding, i.e. always choose a token with the highest probability as the next token\n",
-        "  * `multinomial sampling`: randomly selects the next token based on the probability distribution over the entire vocabulary given by the model\n",
-        "  * parameters: top_k, top_p, temperature\n",
-        "  * More about this: [https://huggingface.co/blog/how-to-generate](https://huggingface.co/blog/how-to-generate)\n"
+        "* I did not experiment with the generation parameters, but there are some important parameters controlling the generation:\n",
+        "* `do_sample=False` means greedy decoding, i.e. always choose a token with the highest probability as the next token\n",
+        "* `multinomial sampling`: randomly selects the next token based on the probability distribution over the entire vocabulary given by the model\n",
+        "  - `top_k`: sample only from K most likely next words, and redistribute the probability mass among those words only\n",
+        "  - `top_p`: sample from the smallest possible set of words whose cumulative probability exceeds the probability p, and redistribute the probability mass among this set of words\n",
+        "  - `temperature`: increase or decrease the confidence of a model by making the probability distribution sharper (low temperature values) or smoother (high temperature values), incorporated into the softmax function\n",
+        "* More about this: [https://huggingface.co/blog/how-to-generate](https://huggingface.co/blog/how-to-generate)\n"
       ],
       "metadata": {
         "id": "HCDjMKyYiQMJ"
