--- a/course_project_template.ipynb
+++ b/course_project_template.ipynb
@@ -178,7 +178,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3.4. Multilingual and cross-lingual experiments"
+        "### 3.4. Cross-lingual experiments"
       ],
       "metadata": {
         "id": "zzThmhszBKjg"
@@ -187,7 +187,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Your code to train and evaluate the multilingual and cross-lingual models"
+        "# Your code to train and evaluate the cross-lingual model"
       ],
       "metadata": {
         "id": "7YAtSLEEBS91"
@@ -212,17 +212,21 @@
         "\n",
         "### 4.3 Relation to random baseline / expected performance / state of the art\n",
         "\n",
-        "(Compare your results to the random and state-of-the-art performance)\n",
+        "(Compare your results with the random and state-of-the-art performance)\n",
         "\n",
         "---\n",
         "\n",
         "## 5. Bonus Task (optional)\n",
         "\n",
-        "### 5.1. Data selection\n",
+        "### 5.1. and 5.2. Model and Data selection\n",
         "\n",
-        "(Briefly describe how many English and target language examples were used and how these were selected, include relevant code)\n",
+        "(Briefly describe which model was used and why. Also, describe how the test data was downsampled, include relevant code.)\n",
         "\n",
-        "### 5.2 Sentence representations"
+        "### 5.3. Prompt design\n",
+        "\n",
+        "(Include your final prompt here. Also, explain here all prompt engineering insights you learned during the project.)\n",
+        "\n",
+        "### 5.4. Generate"
       ],
       "metadata": {
         "id": "x7ylOS8FdYZ5"
@@ -231,7 +235,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Your code to create a sentence embedding for the given text here"
+        "# Your code to run the generative model and extract predictions from the model output."
       ],
       "metadata": {
         "id": "32DU04FndRdM"
@@ -242,29 +246,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 5.3. Cosine similarity"
+        "### 5.5. Evaluation and results\n",
+        "\n",
+        "(Briefly summarize your results)"
       ],
       "metadata": {
         "id": "4ghO4JemeFKK"
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# Your code to calculate the cosine similarity of the embeddings and select the target sentence that maximizes the cosine similarity here"
-      ],
-      "metadata": {
-        "id": "9tzYWQ_zeCYp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "### 5.4 Bonus task evaluation\n",
+        "### 5.6 Error analysis (group projects only)\n",
         "\n",
-        "(Present the evaluation results here)"
+        "(Present the error analysis results here)"
       ],
       "metadata": {
         "id": "8XLZlItdePfJ"
