--- a/course_project_template_2025.ipynb
+++ b/course_project_template_2025.ipynb
@@ -324,7 +324,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 8 Error analysis (group projects only)\n",
+        "## 8 Error analysis (group projects only)\n",
         "\n",
         "(Present the error analysis results here)"
       ],
