update due to new lighteval version

--- a/lighteval_example.ipynb
+++ b/lighteval_example.ipynb
@@ -47,7 +47,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install --quiet lighteval"
+        "!pip install --quiet lighteval emoji"
       ]
     },
     {
@@ -71,9 +71,8 @@
       "cell_type": "code",
       "source": [
         "!lighteval accelerate \\\n",
-        "    --model_args \"pretrained=gpt2\" \\\n",
-        "    --tasks \"leaderboard|arc:challenge|0|0\" \\\n",
-        "    --override_batch_size 1 \\\n",
+        "    \"pretrained=gpt2,,batch_size=1\" \\\n",
+        "    \"leaderboard|arc:challenge|0|0\" \\\n",
         "    --output_dir=\"./evals/\""
       ],
       "metadata": {
