added model_name instead of pretrained

--- a/lighteval_example.ipynb
+++ b/lighteval_example.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "source": [
         "!lighteval accelerate \\\n",
-        "    \"pretrained=gpt2,batch_size=1\" \\\n",
+        "    \"model_name=gpt2,batch_size=1\" \\\n",
         "    \"leaderboard|arc:challenge|0|0\" \\\n",
         "    --output_dir=\"./evals/\""
       ],
