update for compatibility with new version of lighteval

--- a/lighteval_results.ipynb
+++ b/lighteval_results.ipynb
@@ -29,7 +29,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install --quiet lighteval more_itertools"
+        "!pip install --quiet lighteval more_itertools emoji"
       ]
     },
     {
@@ -60,13 +60,33 @@
       },
       "outputs": [],
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "!mkdir evals\n",
+        "\n",
         "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
-        "    $HOME/.local/bin/lighteval accelerate \\\n",
-        "        --model_args \"pretrained=$model\" \\\n",
-        "        --tasks \"leaderboard|arc:challenge|0|0,leaderboard|arc:challenge|1|0,leaderboard|arc:challenge|5|0\" \\\n",
-        "        --override_batch_size 32 \\\n",
-        "        --output_dir=\"./evals/\" \\\n",
-        "        --cache_dir=\"/scratch/project_462000353/transformers_cache/\"; \\\n",
+        "    lighteval accelerate \\\n",
+        "        "model_name=${model},batch_size=8" \\\n",
+        "        "leaderboard|arc:challenge|0|0" \\\n",
+        "        --max-samples 100 \\\n",
+        "        --output_dir=\"/content/evals/\" \\\n",
+        "done"
+        "\n",
+        "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
+        "    lighteval accelerate \\\n",
+        "        "model_name=${model},batch_size=8" \\\n",
+        "        "leaderboard|arc:challenge|1|0" \\\n",
+        "        --max-samples 100 \\\n",
+        "        --output_dir=\"/content/evals/\" \\\n",
+        "done"
+        "\n",
+        "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
+        "    lighteval accelerate \\\n",
+        "        "model_name=${model},batch_size=8" \\\n",
+        "        "leaderboard|arc:challenge|5|0" \\\n",
+        "        --max-samples 100 \\\n",
+        "        --output_dir=\"/content/evals/\" \\\n",
         "done"
       ]
     },
