--- a/lighteval_results.ipynb
+++ b/lighteval_results.ipynb
@@ -67,26 +67,26 @@
         "\n",
         "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
         "    lighteval accelerate \\\n",
-        "        "model_name=${model},batch_size=8" \\\n",
-        "        "leaderboard|arc:challenge|0|0" \\\n",
+        "        \"model_name=${model},batch_size=8\" \\\n",
+        "        \"leaderboard|arc:challenge|0|0\" \\\n",
         "        --max-samples 100 \\\n",
-        "        --output_dir=\"/content/evals/\" \\\n",
+        "        --output_dir=\"/content/evals/\"; \\\n",
         "done"
         "\n",
         "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
         "    lighteval accelerate \\\n",
-        "        "model_name=${model},batch_size=8" \\\n",
-        "        "leaderboard|arc:challenge|1|0" \\\n",
+        "        \"model_name=${model},batch_size=8\" \\\n",
+        "        \"leaderboard|arc:challenge|1|0\" \\\n",
         "        --max-samples 100 \\\n",
-        "        --output_dir=\"/content/evals/\" \\\n",
+        "        --output_dir=\"/content/evals/\"; \\\n",
         "done"
         "\n",
         "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
         "    lighteval accelerate \\\n",
-        "        "model_name=${model},batch_size=8" \\\n",
-        "        "leaderboard|arc:challenge|5|0" \\\n",
+        "        \"model_name=${model},batch_size=8\" \\\n",
+        "        \"leaderboard|arc:challenge|5|0\" \\\n",
         "        --max-samples 100 \\\n",
-        "        --output_dir=\"/content/evals/\" \\\n",
+        "        --output_dir=\"/content/evals/\"; \\\n",
         "done"
       ]
     },
