Fix syntax error

--- a/lighteval_results.ipynb
+++ b/lighteval_results.ipynb
@@ -71,7 +71,7 @@
         "        \"leaderboard|arc:challenge|0|0\" \\\n",
         "        --max-samples 100 \\\n",
         "        --output_dir=\"/content/evals/\"; \\\n",
-        "done"
+        "done",
         "\n",
         "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
         "    lighteval accelerate \\\n",
@@ -79,7 +79,7 @@
         "        \"leaderboard|arc:challenge|1|0\" \\\n",
         "        --max-samples 100 \\\n",
         "        --output_dir=\"/content/evals/\"; \\\n",
-        "done"
+        "done",
         "\n",
         "!for model in gpt2 allenai/OLMo-1B-hf; do \\\n",
         "    lighteval accelerate \\\n",
