Fix output directory flag in lighteval command

--- a/lighteval_example.ipynb
+++ b/lighteval_example.ipynb
@@ -73,7 +73,7 @@
         "!lighteval accelerate \\\n",
         "    \"model_name=gpt2,batch_size=1\" \\\n",
         "    \"leaderboard|arc:challenge|0|0\" \\\n",
-        "    --output_dir=\"./evals/\""
+        "    --output-dir=\"./evals/\""
       ],
       "metadata": {
         "id": "00ZWF1MZbiug"
